--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Bethlehem, PA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Cooking, Foraging, and Watching Films</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Leading a developer team or creating software that
+         solved social problems
+      </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Bethlehem, PA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To improve my quality of life, whilst expressing my creativity. </p>
     </section>
 
     <footer id="footer">
